<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.apams.Apams_main$PlaceholderFragment" >

    <TextView
        android:id="@+id/section_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/Map_Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button2"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="28dp"
        android:onClick="gotoMap"
        android:text="@string/Map" />

    <Button
        android:id="@+id/Camara_Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="Camara"
        android:onClick="gotoCamara" />

    <Button
        android:id="@+id/Database_Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="48dp"
        android:text="Database" 
        android:onClick = "gotoDatabase"/>

    <Button
        android:id="@+id/button_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Database_Button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:text="@string/button_add"
        android:onClick="gotoAddNew" />

    <Button
        android:id="@+id/quit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Camara_Button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="63dp"
        android:text="@string/quit_button"
        android:onClick="quitButton" />

</RelativeLayout>
